mock-exams/topic-wise/ServicesAndNetworking/network-policies/NetworkPolicy/q9/full-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: full-policy
spec:
  podSelector:
    matchLabels:
      app: microservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - port: 8080
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: database
      ports:
        - port: 5432
    - ports:
      - port: 53
        protocol: UDP
